@@ -1,4 +1,4 @@
 name = Engagements
 description = Facilitate and track communications between student and advisors.
 core = 6.x
-schema = 5
+schema = 6
