@@ -27,6 +27,7 @@ CREATE TABLE `content__engagement` (
   `field__attachment` varchar(255) DEFAULT NULL,
   `field__manual_entry` varchar(10) DEFAULT NULL,
   `field__from_sms_phone` varchar(255) DEFAULT NULL,
+  `field__to_sms_phone` varchar(255) DEFAULT NULL,
   `field__external_msg_id` varchar(255) DEFAULT NULL,
   PRIMARY KEY (`vid`),
   KEY `cid` (`cid`),
@@ -39,6 +40,7 @@ CREATE TABLE `content__engagement` (
   KEY `field__visibility` (`field__visibility`),
   KEY `field__attachment` (`field__attachment`),
   KEY `field__from_sms_phone` (`field__from_sms_phone`),
+  KEY `field__to_sms_phone` (`field__to_sms_phone`),
   KEY `field__external_msg_id` (`field__external_msg_id`),
   KEY `field__manual_entry` (`field__manual_entry`)
 );  
@@ -186,6 +188,16 @@ function engagements_update($old_schema, $new_schema) {
     db_query("ALTER TABLE sms_history ADD INDEX (`delivery_status`) ");
     db_query("ALTER TABLE sms_history ADD INDEX (`err_code`) ");
 
+    
+  }
+
+  
+  if (intval($old_schema < 6)) {
+      
+    db_query("ALTER TABLE content__engagement ADD COLUMN `field__to_sms_phone` varchar(255) DEFAULT NULL ");
+          
+    db_query("ALTER TABLE content__engagement ADD INDEX (`field__to_sms_phone`) ");
+        
     
   }
 
