@@ -112,7 +112,7 @@ function engagements_menu()
 
 
   $items["advisee-engagements"] = array(
-    "title" => "Advisee Engagements%ENGAGEMENTS_ADVISEE_ALERTS_COUNT%",
+    "title" => "Engagements Received%ENGAGEMENTS_ADVISEE_ALERTS_COUNT%",
     "page_callback" => "engagements_display_advisee_engagements_page",
     "access_arguments" => array('can_view_engagements'),
     "type" => MENU_TYPE_TAB,
@@ -172,14 +172,20 @@ function engagements_get_alert_count_by_type($account = NULL) {
   
   if ($account->id == 0) return FALSE;
   
+   
   $rtn = array();
-  $types = array('engagement'); 
+  
+  $rtn['engagement']['total'] = 0;
+  $rtn['engagement']['read'] = 0;
+  $rtn['engagement']['unread'] = 0;
+  
+  
+  
+  $already_counted = array();
   
   // We need to know this user's list of advisees.
   $advisees = advise_get_advisees($account->cwid);
-  
-  // TODO:  We should also include students for which we receive txt messages
-  
+      
   $advisee_line = "";
   if ($advisees && count($advisees) > 0) {
     
@@ -187,15 +193,10 @@ function engagements_get_alert_count_by_type($account = NULL) {
     
     $advisee_line = " AND b.field__student_id IN (" . $advisees_list . ") ";
         
-  }
-  else {  // No advisees, do ditch out.
-    return FALSE;
-  }
   
-  foreach ($types as $type) {
-        
+/*          
     $total_count = db_result(db_query("SELECT COUNT(*) as mycount 
-                      FROM content__$type b,                                            
+                      FROM content__engagement b,                                            
                            content n
                      WHERE n.type = ?
                      AND b.vid = n.vid
@@ -205,12 +206,33 @@ function engagements_get_alert_count_by_type($account = NULL) {
                      AND field__direction = 'received'
                      AND field__engagement_type IN ('email', 'txt_msg')
                      AND (field__manual_entry IS NULL OR field__manual_entry != 'Y')
-                     $advisee_line ", array($type))); 
+                     $advisee_line ", array('engagement'))); 
+  */
+  
+    $total_count = 0;
+    $res = db_query("SELECT b.cid  
+                      FROM content__engagement b,                                            
+                           content n
+                     WHERE n.type = ?
+                     AND b.vid = n.vid
+                     AND b.cid = n.cid
+                     AND n.published = 1
+                     AND n.delete_flag = 0                     
+                     AND field__direction = 'received'
+                     AND field__engagement_type IN ('email', 'txt_msg')
+                     AND (field__manual_entry IS NULL OR field__manual_entry != 'Y')
+                     $advisee_line ", array('engagement'));
+    while($cur = db_fetch_array($res)) {
+      $cid = $cur['cid'];      
+      $already_counted[$cid] = $cid;
+      $total_count++;
+    }
+    
     
     
     $read_count = db_result(db_query("SELECT COUNT(*) as mycount 
                       FROM content_last_access a,
-                           content__$type b,                                            
+                           content__engagement b,                                            
                            content n
                      WHERE n.type = ?
                      AND n.published = 1
@@ -222,14 +244,79 @@ function engagements_get_alert_count_by_type($account = NULL) {
                      AND field__engagement_type IN ('email', 'txt_msg')
                      AND (field__manual_entry IS NULL OR field__manual_entry != 'Y')
                      $advisee_line
-                     AND a.user_id = ?", array($type, $account->id)));
+                     AND a.user_id = ?", array('engagement', $account->id)));
     
     
-    $rtn[$type]['total'] = intval($total_count);
-    $rtn[$type]['read'] = intval($read_count);
-    $rtn[$type]['unread'] = $total_count - $read_count; 
-        
-  } // foreach types 
+    $rtn['engagement']['total'] = intval($total_count);
+    $rtn['engagement']['read'] = intval($read_count);
+    $rtn['engagement']['unread'] = $total_count - $read_count; 
+
+  } // if advisees      
+
+  // We should ALSO get these students to show up when we're the recipient of a text number, regardless of if they are
+  // considered our "advisee" or not.
+  $numbers = engagements_get_user_notify_sms_receipt_values($account->id);
+    
+  if ($numbers && is_array($numbers) && count($numbers) > 0) {
+    // Were there any txt messages sent to these number, which we have not read?    
+    $numbers_line = "";
+    $numbers_list = "'" . join("','", $numbers) . "'";
+    
+    $numbers_line = " AND b.field__to_sms_phone IN (" . $numbers_list . ") ";
+    
+    // So, we should also search for results where we received at these numbers, regardless of if the user was our advisee or not.
+    
+    $total_count = 0;
+    $res = db_query("SELECT b.cid  
+                      FROM content__engagement b,                                            
+                           content n
+                     WHERE n.type = ?
+                     AND b.vid = n.vid
+                     AND b.cid = n.cid
+                     AND n.published = 1
+                     AND n.delete_flag = 0                     
+                     AND field__direction = 'received'
+                     AND field__engagement_type IN ('email', 'txt_msg')
+                     AND (field__manual_entry IS NULL OR field__manual_entry != 'Y')
+                     $numbers_line ", array('engagement')); 
+    while($cur = db_fetch_array($res)) {
+      $cid = $cur['cid'];      
+      if (!in_array($cid, $already_counted)) {
+        $already_counted[$cid] = $cid;
+        $total_count++;
+      }
+    }
+            
+    
+    $read_count = db_result(db_query("SELECT COUNT(*) as mycount 
+                      FROM content_last_access a,
+                           content__engagement b,                                            
+                           content n
+                     WHERE n.type = ?
+                     AND n.published = 1
+                     AND b.vid = n.vid
+                     AND b.cid = n.cid                                          
+                     AND n.delete_flag = 0
+                     AND n.cid = a.cid
+                     AND field__direction = 'received'
+                     AND field__engagement_type IN ('email', 'txt_msg')
+                     AND (field__manual_entry IS NULL OR field__manual_entry != 'Y')
+                     $numbers_line
+                     AND a.user_id = ?", array('engagement', $account->id)));
+    
+    
+    $rtn['engagement']['total'] += intval($total_count);
+    $rtn['engagement']['read'] += intval($read_count);
+    $rtn['engagement']['unread'] += ($total_count - $read_count);     
+    
+    
+    
+  } // if numbers
+  
+   
+  
+  
+  if (count($rtn) == 0) return FALSE;
   
   return $rtn;
   
@@ -247,7 +334,7 @@ function engagements_display_advisee_engagements_page() {
   
   fp_add_css(fp_get_module_path('alerts') . '/css/style.css');
   
-  $rtn .= "<p>" . t("This screen shows engagements/communications (emails and text messages) which your advisees have sent, not those which you or any other
+  $rtn .= "<p>" . t("This screen shows engagements/communications (emails and text messages) which advisees have sent, but not those which you or any other
                      faculty/staff member has sent.  To see the complete history of engagements with an advisee, visit the advisee's
                      Engagements tab.") . "</p>";
   
@@ -259,8 +346,20 @@ function engagements_display_advisee_engagements_page() {
   }
   
   if ($student_line) {
-    $student_line = " AND field__student_id IN ($student_line) ";
+    $student_line = " field__student_id IN ($student_line) ";
   }
+  
+  
+  // We also want to show messages sent to us which might not have been from an advisee, but we are a designated recipient anyway.
+  $numbers = engagements_get_user_notify_sms_receipt_values($user->id);
+  $numbers_line = "";    
+  if ($numbers && is_array($numbers) && count($numbers) > 0) {
+    // Were there any txt messages sent to these number, which we have not read?    
+    $numbers_line = "";
+    $numbers_list = "'" . join("','", $numbers) . "'";    
+    $numbers_line = " field__to_sms_phone IN (" . $numbers_list . ") ";  
+  }
+  
   
   $table_headers = array();
   $table_headers[] = array("label" => "Actions");  
@@ -291,18 +390,20 @@ function engagements_display_advisee_engagements_page() {
                    AND n.delete_flag = 0
                    AND n.published = 1  
                    AND field__direction = 'received'
-                   $student_line    
+                   AND ($student_line OR $numbers_line)    
                    AND field__engagement_type IN ('email', 'txt_msg')   
-                   AND (field__manual_entry IS NULL OR field__manual_entry != 'Y')                           
+                   AND (field__manual_entry IS NULL OR field__manual_entry != 'Y')    
+                   GROUP BY a.cid                       
                    $order_by", $filter_params, $limit, 0, "SELECT COUNT(DISTINCT(a.cid)) FROM content__engagement a, content n
                                                                                                          WHERE a.vid = n.vid                                                                                                         
                                                                                                          AND a.cid = n.cid
                                                                                                          AND n.delete_flag = 0
                                                                                                          AND n.published = 1
                                                                                                          AND field__direction = 'received'
-                                                                                                         $student_line  
+                                                                                                         AND ($student_line OR $numbers_line)  
                                                                                                          AND field__engagement_type IN ('email', 'txt_msg')
-                                                                                                         AND (field__manual_entry IS NULL OR field__manual_entry != 'Y')                                                                                                      
+                                                                                                         AND (field__manual_entry IS NULL OR field__manual_entry != 'Y')
+                                                                                                         GROUP BY a.cid                                                                                                      
                                                                                                          $order_by");  
   while ($cur = db_fetch_object($res)) {
     $cid = $cur->cid;
@@ -1140,6 +1241,8 @@ function engagements_handle_incoming_sms($vars = array())
     $content->field__student_id['value'] = $stu_cwid;
     $content->field__engagement_type['value'] = 'txt_msg';
     $content->field__direction['value'] = $dir;
+    $content->field__from_sms_phone['value'] = $from_mobile;
+    $content->field__to_sms_phone['value'] = $to_mobile;
 
     content_save($content);
     $cid = $content->cid;
@@ -2470,6 +2573,12 @@ function engagements_content_register_content_type()
     'value' => '',
   );
 
+  $fields['to_sms_phone'] = array(
+    'type' => 'hidden',
+    'value' => '',
+  );
+
+
 
   $fields['external_msg_id'] = array(
     'type' => 'hidden',
@@ -3012,13 +3121,17 @@ function engagements_send_email_or_txt_form_submit($form, &$form_state)
       fp_add_message(t("Text Message has been successfully sent."));
       // save the external_msg_id with the content.
       $content->field__external_msg_id['value'] = $external_msg_id;
-      $content->log = "[AUTO] Updating external_msg_id";
+      
+      $content->field__to_sms_phone['value'] = $mobile_phone;
+      $content->field__from_sms_phone['value'] = $from_number;
+      
+      $content->log = "[AUTO] Updating external_msg_id"; 
       content_save($content);
     }
   } // type == 'txt_msg'
 
   if ($manual_entry != 'Y') {
-    watchdog("engagements", "sent $engagement_type to $student_id");
+    watchdog("engagements", "sent $engagement_type to $student_id ($mobile_phone)");
   }
   else {
     watchdog("engagements", "logged $engagement_type to $student_id");
@@ -3248,7 +3361,7 @@ function engagements_display_main()
 
     $pre_description = "";
 
-    $sms_extra_details = "";
+    $sms_extra_details = $sms_delivery_details = "";
 
     if ($type == 'txt_msg' && $external_msg_id) {
 
@@ -3261,6 +3374,28 @@ function engagements_display_main()
         $sms_extra_details = "<span class='sms-extra-details'>";
         $sms_extra_details .= t("(%desc)", array('%desc' => $desc));
         $sms_extra_details .= "</span>";
+                
+        if (isset($details['delivery_status']) && $details['delivery_status'] == 'undelivered') {
+          
+          $moreinfo = "";
+          
+          $moreinfo .= "<p>" . t("We're sorry, but this message was not delivered.
+                                  Usually this happens when the recipient's carrier (ex: AT&T, Verizon, etc) marks the message as 'spam' and refuses to deliver
+                                  it to the user. <strong>Unfortunately, this is something which is outside the control of @fp.</strong> 
+                                  <br><br>
+                                  This may also be due to the user's phone being invalid, disconnected, or incapable of receiving SMS text messages.
+                                  <br><br>
+                                  Your IT/@fp administrator may be able to log into your
+                                  SMS vendor account for more information.
+                                  <br><br>
+                                  Note: the recipient <strong><u>did not receive this message</u></strong>.  Please try again via email or another
+                                  communication route.", array("@fp" => variable_get("system_name", "FlightPath"))) . "</p>";
+        
+          $moreinfo = base64_encode($moreinfo);
+          $sms_delivery_details .= "<div class='sms-undelivered-error'><i class='fa fa-warning'></i> " . t("Undelivered by phone carrier network - %msg", array("%msg" => @$details['err_friendly_message'])) . "
+                                    &nbsp; <a href='javascript:fp_alert(\"$moreinfo\",\"base64\");' title='" . t("More information") . "'><i class='fa fa-question-circle'></i></a></div>";
+        } 
+        
       }
     }
 
@@ -3398,8 +3533,9 @@ function engagements_display_main()
                   <span class='header-description'>
                       <span class='pre-description'>$pre_description</span>
                       {$content->field__engagement_type['display_value']}                      
-                  </span>$sms_extra_details
+                  </span>$sms_extra_details 
                   <span class='header-phone-outcome'>: {$content->field__direction['display_value']} $header_desc_extra</span>
+                  $sms_delivery_details
                   <span class='header-edit'></span>
                   <span class='header-date-time'>" . $content->field__activity_datetime['display_value'] . "</span>                  
                   <span class='header-author'>$author_name</span>
